--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
     "next": "14.2.20",
     "react": "^18",
     "react-dom": "^18",
+    "react-draggable": "^4.4.6",
     "react-hook-form": "^7.56.4",
     "recoil": "^0.7.7",
     "yup": "^1.6.1"
