--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,7 @@
     "formik": "^2.4.6",
     "framer-motion": "^12.12.1",
     "next": "14.2.20",
+    "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
     "react-draggable": "^4.4.6",
