--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18",
     "react-draggable": "^4.4.6",
     "react-hook-form": "^7.56.4",
+    "react-icons": "^5.5.0",
     "recoil": "^0.7.7",
     "yup": "^1.6.1"
   },
