--- a/front/package.json
+++ b/front/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
     "recoil": "^0.7.7",
+    "sharp": "^0.34.2",
     "yup": "^1.6.1"
   },
   "devDependencies": {
