--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -1,4 +1,3 @@
-gunicorn
 aiohappyeyeballs==2.6.1
 aiohttp==3.11.18
 aiosignal==1.3.2
@@ -73,5 +72,6 @@ urllib3==2.4.0
 uvicorn==0.34.2
 watchfiles==1.0.5
 websockets==15.0.1
+whitenoise==6.9.0
 yarl==1.20.0
 zstandard==0.23.0
